# epidemic-sim

./: Cargo.toml  config.toml
src/: main.rs  renderer.rs  simulation.rs
src/renderer/: stats_buf.rs
src/simulation/: params.rs  person.rs
