[package]
name = "infections"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.28"
rand = "0.6"
glium = "0.30"
glium_text = { git = "https://github.com/fizyk20/glium_text", branch = "master" }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
